lt-LT: alerts tab
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7950 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -212,7 +212,7 @@ foxtrick.HeaderFix.RemoveFlicker.desc=Remove flickering in forum using Headerfix
 foxtrick.SkinPlugin.desc=Prideda Jūsų CSS stilių
 foxtrick.CurrencyConverter.desc=Keičia HT valiutą
 foxtrick.MovePlayerStatement.desc=Perkelia žaidėjo pareiškimus prie žaidėjo avataro. Jeigu avatarai išjungti, pareiškimai taip pat pradingsta.
-foxtrick.TickerColoring.desc=Naujienų eilutėje skirtingus įvykius nuspalvina skirtingomis spalvomis.
+foxtrick.TickerColoring.desc=Naujienų eilutėje skirtingus įvykius nuspalvinti skirtingomis spalvomis.
 #ExtraShortcuts
 foxtrick.ExtraShortcuts.desc=Prie pagrindinių nuorodų prideda keletą papildomų
 foxtrick.ExtraShortcuts.AddLeft.desc=Pažymėjus nuoroda pridedama kairėje, o nepažymėjus – dešinėje.
@@ -241,8 +241,8 @@ foxtrick.ContextMenuCopy.Link.desc=Option for copying link location in HT-ML
 foxtrick.ContextMenuCopy.HtMl.desc=Option for copying selected content in HT-ML
 foxtrick.ContextMenuCopy.Table.desc=Option for copying table in HT-ML
 foxtrick.NewMail.desc=Paryškinti gautų forumo ir pašto žinučių skaitiklius
-foxtrick.NewMail.NotifyMail.desc=Show a notification if there are new mails to you
-foxtrick.NewMail.NotifyForum.desc=Show a notification if there are new forum replies to you
+foxtrick.NewMail.NotifyMail.desc=Rodyti pranešimą atėjus naujam laiškui
+foxtrick.NewMail.NotifyForum.desc=Rodyti pranešimą gavus atsakymą forume
 foxtrick.CopyYouth.desc=Copy functions for youth reports and sources
 foxtrick.CopyYouth.TrainingReport.desc=Treniruočių ataskaita
 foxtrick.CopyYouth.ScoutComment.desc=Scout comment
@@ -324,8 +324,8 @@ foxtrick.ForumThreadAutoIgnore.desc=Automatically ignore forum topics with selec
 foxtrick.ForumThreadAutoIgnore.Tags.desc=List of tags, eg: NT, idea, Bug. Comma separated, case insensitive.
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Whitelist of threads by IDs (the part before the dot). Threads in whitelist will not be ignored. Comma separated.
 foxtrick.TableSort.desc=Makes all 'proper' tables sortable which have a header (including tables in forum postings)
-foxtrick.LiveAlert.desc=Show a notification for HT Live goals
-foxtrick.LiveAlert.Sound.desc=Also alert with a sound
+foxtrick.LiveAlert.desc=Rodyti pranešimą apie HT Live įvarčius
+foxtrick.LiveAlert.Sound.desc=Taip pat paleisti garsinį signalą
 foxtrick.OldStyleFace.desc=Show faces in old Hattrick style
 foxtrick.NtPeek.desc=Peeks NT/U20 matches on country page and My Hattrick
 foxtrick.SeriesFlags.desc=Show series flags beside user links
@@ -348,7 +348,7 @@ foxtrick.MyMonitor.TeamIcons.desc=Show team logos
 foxtrick.MarkAllAsRead.desc=A button to mark threads in all forums as read
 foxtrick.ShowFriendlyBooked.desc=Show whether a team has booked a friendly on series page
 foxtrick.ShowFriendlyBooked.OnDemand.desc=Show friendlies on demand only
-foxtrick.TickerAlert.desc=Display a notification when a new ticker has arrived. Keep text field empty to display alert only and no sound.
+foxtrick.TickerAlert.desc=Rodyti pranešimą pasikeitus naujienų eilutei. Jei nepageidaujate garso, palikite atitinkamus teksto laukus tuščius.
 foxtrick.ShowLineupSet.desc=Highlight teams that have set a lineup, and/or ownerless teams, and/or winning teams in league fixture/result table
 foxtrick.ShowLineupSet.LineupSet.desc=Highlight teams that have set a lineup
 foxtrick.ShowLineupSet.Ownerless.desc=Highlight ownerless teams
@@ -990,19 +990,19 @@ MyMonitor.type.nt=National
 MarkAllAsRead.title=Mark threads in all forums as read
 
 # TickerAlert
-TickerAlert.enable=Enable
-TickerAlert.sound=Sound
+TickerAlert.enable=Įjungta
+TickerAlert.sound=Garsas
 
 # tickers
-ticker.type.welcome=Welcome message
-ticker.type.supporter=Supported team logs in
-ticker.type.forum=Forum replies
-ticker.type.transfer=Transfer info
-ticker.type.challenge=Challenge
-ticker.type.guestbook=Guestbook
-ticker.type.mail=HT-Mail
-ticker.type.myht=My Hattrick message
-ticker.type.others=Others
+ticker.type.welcome=Pasisveikinimo žinutė
+ticker.type.supporter=Prisijungė remiama komanda
+ticker.type.forum=Atsakymai forume
+ticker.type.transfer=Prekybos informacija
+ticker.type.challenge=Kvietimas žaisti draugiškas
+ticker.type.guestbook=Svečių knyga
+ticker.type.mail=HT-Paštas
+ticker.type.myht=Mano Hattrick žinutė
+ticker.type.others=Kita
 
 # LocalTime
 LocalTime.hattrick=Hattrick time
