lt-LT: links tab
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7951 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -89,18 +89,18 @@ foxtrick.EmbedMedia.EmbedDailymotionVideos.desc=Embed Dailymotion videos
 foxtrick.CopyPostID.desc=Nuoroda žinutės ID kopijuoti
 foxtrick.CopyPosting.desc=Add icon to copy the posting including references
 foxtrick.ShowForumPrefButton.desc=Visuose forumo puslapiuose rodo forumo nustatymų mygtuką
-foxtrick.Links.desc=Basic module essential for other link modules to work properly.
+foxtrick.Links.desc=Pagrindis modulis, būtinas kitų nuorodų modulių veiklai.
 foxtrick.LinksLeague.desc=Prideda išorinių nuorodų grupės puslapyje
 foxtrick.LinksTeam.desc=Prideda išorinių nuorodų komandos puslapyje
 foxtrick.LinksCountry.desc=Prideda išorinių nuorodų šalies puslapyje
 foxtrick.LinksChallenges.desc=Prideda išorinių nuorodų kvietimų puslapyje
 foxtrick.LinksEconomy.desc=Prideda išorinių nuorodų finansų puslapyje
-foxtrick.LinksYouthOverview.desc=Prideda išorinių nuorodų jaunimo komandos puslapyje
-foxtrick.LinksYouthTraining.desc=Adds some external links to the youth training page
-foxtrick.LinksYouthPlayerDetail.desc=Adds some external links to the youth player details page
-foxtrick.LinksYouthPlayerList.desc=Adds some external links to the youth players page
-foxtrick.LinksYouthMatchList.desc=Adds some external links to the youth matches page
-foxtrick.LinksYouthLeague.desc=Adds some external links to the youth league page
+foxtrick.LinksYouthOverview.desc=Prideda išorinių nuorodų jaunių komandos puslapyje
+foxtrick.LinksYouthTraining.desc=Prideda išorinių nuorodų jaunių treniruočių puslapyje
+foxtrick.LinksYouthPlayerDetail.desc=Prideda išorinių nuorodų jaunio puslapyje
+foxtrick.LinksYouthPlayerList.desc=Prideda išorinių nuorodų jaunių sąrašo puslapyje
+foxtrick.LinksYouthMatchList.desc=Prideda išorinių nuorodų jaunių rungtynių puslapyje
+foxtrick.LinksYouthLeague.desc=Prideda išorinių nuorodų jaunių grupės puslapyje
 foxtrick.LinksArena.desc=Prideda išorinių nuorodų stadiono puslapyje
 foxtrick.LinksCoach.desc=Prideda išorinių nuorodų trenerio keitimo puslapyje
 foxtrick.LinksPlayerDetail.desc=Prideda išorinių nuorodų žaidėjo puslapyje
@@ -114,7 +114,7 @@ foxtrick.LinksManager.desc=Prideda išorinių nuorodų komandos savininko puslap
 foxtrick.LinksAchievements.desc=Prideda išorinių nuorodų pasiekimų puslapyje
 foxtrick.LinksStaff.desc=Prideda išorinių nuorodų savanorių puslapyje
 foxtrick.LinksTracker.desc=Prideda nuorodų į išorinius šalių statistikos puslapius atitinkamų rinktinių ir jų žaidėjų puslapiuose
-foxtrick.LinksClubTransfers.desc=Adds some external links to the club transfer page
+foxtrick.LinksClubTransfers.desc=Prideda išorinių nuorodų sandorių puslapyje
 foxtrick.ForumAlterHeaderLine.desc=Pakeičia žinutės antraštę
 foxtrick.Singleline2.desc=Alternative ForumHeader single line module. Slightly faster than the other versions. Disables some conflicting forum post changing modules.
 # please translate next lines again if needed
@@ -1011,7 +1011,7 @@ LocalTime.local=Local time
 LocalTime.local.title=Time in local time zone. Click the clock to switch to Hattrick time.
 
 # Links
-Links.feeds=Feeds of link lists (separated by line breaks)
+Links.feeds=Nuorodų srautai (kiekvienas iš naujos eilutės)
 
 #actions
 Copy=Copy
