lt-LT: a typo & icon link
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7952 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -1043,7 +1043,7 @@ button.add=Add
 button.remove=Remove
 button.top=Viršun
 button.authorize=Authorize
-button.export=Exportuoti
+button.export=Eksportuoti
 button.import=Įkelti
 button.restoreDefault=Atstatyti pradinius nustatymus
 button.deleteToken=Panaikinti prieigą
@@ -1074,7 +1074,7 @@ exception.error=Error %s
 # Captions and labels of foxtrick preferences
 
 foxtrick=FoxTrick
-preferences=Preferences
+preferences=Nustatymai
 foxtrick.prefs.preferences=FoxTrick nustatymai
 foxtrick.log.header=FoxTrick Log
 # keep the following line untranslated
