--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -148,6 +148,7 @@ foxtrick.ForumLastPost.lastpage.desc=Иди на последњу страниц
 foxtrick.MatchPlayerColouring.desc=Сенчи играче у меч извештају у зависности од тима за који су играли. Уколико на страницу меч извештаја дођете преко линка на страници играча, само ће тај играч бити осенчен.
 foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Посебно сенчење за играче вашег тима.
 foxtrick.MatchReportFormat.desc=Презентација извештаја по линијaма на основу догађаја са меча. Боје за оквире, позадине и имена клубова можете подесити и сами а за више информација о томе погледајте одељак 'Стилизовање Фокстрика' у језичку 'О Фокстрику'.
+foxtrick.MatchReportFormat.ShowEventIcons.desc=Додај иконице за догађаје.
 foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=Посебно сенчење за ваш тим.
 foxtrick.ForumRedirManagerToTeam.desc=Преусмерава линкове на форуму са странице менаџера на страницу тима.
 foxtrick.ManagerButtons.desc=Додај или промени дугмиће на страници менаџера или тима.
@@ -636,6 +637,9 @@ PlayerNumber.abbr=Бр.
 TSI=Укупни индекс вештина
 TSI.abbr=ТСИ
 
+CanBePromotedIn=Дана до промоције
+CanBePromotedIn.abbr=Пром
+
 Personality=Карактер играча
 Agreeability=Личност
 Agreeability.abbr=Лич
@@ -713,8 +717,6 @@ Current_league.abbr=Држава
 
 JoinedSince=Време проведено у клубу
 JoinedSince.abbr=У клубу
-HomeGrown=Играчи из омладинског погона
-HomeGrown.abbr=ОП
 
 Hotlist=Маркирај трансфер
 Hotlist.abbr=МТ
