Russian translation update to r7967
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7968 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -1,5 +1,5 @@
 # ru-RU (Russian language file)
-# based on MASTER language file r7927
+# based on MASTER language file r7967
 # by _KOHb_ [teamId=28914]
 
 # Hints:
@@ -148,6 +148,7 @@ foxtrick.ForumLastPost.lastpage.desc=Переход на последнюю ст
 foxtrick.MatchPlayerColouring.desc=Подсвечивать имена игроков в отчёте о матче в зависимости от их клуба. При использовании ссылок на странице игрока, подсвечивается только этот игрок.
 foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Отдельная подсветка игроков своей команды
 foxtrick.MatchReportFormat.desc=Отчёт о матче в виде построчного представления согласно последовательности событий.
+foxtrick.MatchReportFormat.ShowEventIcons.desc=Добавлять соответствующие событиям значки.
 foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=Отдельная подсветка своей команды
 foxtrick.ForumRedirManagerToTeam.desc=Перенаправлять ссылки с форума со страницы менеджера на страницу его клуба
 foxtrick.ManagerButtons.desc=Добавить или изменить кнопки на страницах менеджера и клуба
@@ -410,6 +411,7 @@ foxtrick.TeamStats.TransferListed.label=Выставлен на продажу
 foxtrick.TeamStats.Pictures.label=Лица
 foxtrick.TeamStats.PlayedLatest.label=Играл в последнем матче
 foxtrick.TeamStats.NotPlayedLatest.label=Не играл в последнем матче
+foxtrick.TeamStats.NotTransferListed.label=Не выставлен на трансфер
 foxtrick.TeamStats.ActivePlayers.label=Действующие игроки
 foxtrick.TeamStats.HomeGrownPlayers.label=Доморощенные игроки
 foxtrick.TeamStats.PurchasedPlayers.label=Купленные игроки
@@ -636,6 +638,9 @@ PlayerNumber.abbr=№
 TSI=Общий индекс навыков
 TSI.abbr=TSI
 
+CanBePromotedIn=Может быть вызван через
+CanBePromotedIn.abbr=Выз
+
 Personality=Личные качества
 Agreeability=Характер
 Agreeability.abbr=Ха
@@ -713,8 +718,6 @@ Current_league.abbr=Лига
 
 JoinedSince=В клубе с
 JoinedSince.abbr=С даты
-HomeGrown=Собственный молодой игрок
-HomeGrown.abbr=YP
 
 Hotlist=Hotlist
 Hotlist.abbr=Hot
@@ -809,6 +812,7 @@ CopyYouth.fixturesSource=Скопировать исходный код стра
 CopyYouth.fixturesSource.copied=Исходный код страницы был скопирован в буфер обмена.
 CopyYouth.goto=Перейти к %s
 
+MatchReportFormat.matchReport=Отчёт о матче
 MatchReportFormat.lineup=Составы команд
 MatchReportFormat.kickOff=Стартовый свисток
 MatchReportFormat.halfTime=Перерыв
