Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7970 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -411,6 +411,7 @@ foxtrick.TeamStats.TransferListed.label=На трансфер листи
 foxtrick.TeamStats.Pictures.label=Слике
 foxtrick.TeamStats.PlayedLatest.label=Играли последњи меч
 foxtrick.TeamStats.NotPlayedLatest.label=Нису играли последњи меч
+foxtrick.TeamStats.NotTransferListed.label=Нису на трансфер листи
 foxtrick.TeamStats.ActivePlayers.label=Активни играчи
 foxtrick.TeamStats.HomeGrownPlayers.label=Поникли у клубу
 foxtrick.TeamStats.PurchasedPlayers.label=Купљени играчи
@@ -811,6 +812,7 @@ CopyYouth.fixturesSource=Копирај изворни код за мечеве
 CopyYouth.fixturesSource.copied=Изворни код за мечеве је ископиран у меморију.
 CopyYouth.goto=Иди на %s
 
+MatchReportFormat.matchReport=Извештај са меча
 MatchReportFormat.lineup=Поставе
 MatchReportFormat.kickOff=Почетак
 MatchReportFormat.halfTime=Полувреме
