MatchReport localization fix
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7971 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -812,7 +812,7 @@ CopyYouth.fixturesSource=Копирај изворни код за мечеве
 CopyYouth.fixturesSource.copied=Изворни код за мечеве је ископиран у меморију.
 CopyYouth.goto=Иди на %s
 
-MatchReportFormat.matchReport=Извештај са меча
+MatchReportFormat.MatchReport=Извештај са меча
 MatchReportFormat.lineup=Поставе
 MatchReportFormat.kickOff=Почетак
 MatchReportFormat.halfTime=Полувреме
