lt-LT: link to here
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7984 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -1141,7 +1141,7 @@ link.nightlyOpera=Momentinės versijos: Opera
 link.nightlySafari=Momentinės versijos: Safari
 link.recentChanges=Pakeitimų sąrašas
 
-module.link=You can copy and paste this link to the forum to direct here
+module.link=Galite į forumą nukopijuoti tiesiogiai čia vedančią nuorodą
 
 foxtrick.showReleaseNotes=Rodyti versijos informaciją po kiekvieno atnaujinimo
 foxtrick.versionReleaseNotes=Rodyti versijos informaciją:
