Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8006 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -85,6 +85,8 @@ foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=Угради YouTube видео кл
 foxtrick.EmbedMedia.EmbedVimeoVideos.desc=Угради Vimeo видео клипове
 foxtrick.EmbedMedia.EmbedFunnyOrDieVideos.desc=Угради FunnyOrDie видео клипове
 foxtrick.EmbedMedia.EmbedDailymotionVideos.desc=Угради Dailymotion видео клипове
+#Forum direct page links
+foxtrick.DirectPageLinks.desc=Додаје линкове за прелазак на одређену страницу у теми на Форуму.
 #
 foxtrick.CopyPostID.desc=Преусмеравање ПостИД-а.
 foxtrick.CopyPosting.desc=Додај иконицу за копирање поста на форуму заједно са референцама.
