lt-LT: match tab
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8008 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -27,15 +27,15 @@ foxtrick.AddLeaveConfButton.desc=Prideda mygtuką 'Išeiti iš forumo' prie kiek
 foxtrick.StarsCounter.desc=Prideda bendrą žvaižgždučių sumą rungtynių sudėties puslapyje
 foxtrick.MoveLinks.desc=Perkelia komandos savininko grupės ir šalies nuorodas į žinutės viršų. Pastaba: Hattrick forumo nustatymas 'Rodyti avatarus' turi būti įjungtas!
 #AttVsDef
-foxtrick.AttVsDef.desc=Prideda atakos/gynybos palyginimą rungtynių puslapyje
+foxtrick.AttVsDef.desc=Prideda atakos ir gynybos palyginimą rungtynių puslapyje
 foxtrick.AttVsDef.oldstyle.desc=senuoju stiliumi
 foxtrick.AttVsDef.newstyle.desc=naujuoju stiliumi
-foxtrick.AttVsDef.oldstyleifkseparated.desc=old style (separated ind. set pieces)
+foxtrick.AttVsDef.oldstyleifkseparated.desc=senuoju stiliumi (net. stand. situacijos atskirai)
 #Ratings
 foxtrick.Ratings.desc=Rodo reitingus rungtynių puslapyje
-foxtrick.Ratings.HideAverages.desc=Hide average ratings
+foxtrick.Ratings.HideAverages.desc=Paslėpti vidutinius reitingus
 foxtrick.Ratings.HatStats.desc=HatStats
-foxtrick.Ratings.HatStatsDetailed.desc=HatStats (detailed)
+foxtrick.Ratings.HatStatsDetailed.desc=HatStats (detaliai)
 foxtrick.Ratings.HatStatsSeparated.desc=HatStats separated per rating
 foxtrick.Ratings.LoddarStats.desc=LoddarStats
 foxtrick.Ratings.PeasoStats.desc=PeasoStats
@@ -146,8 +146,8 @@ foxtrick.ForumNextAndPrevious.desc=Panaikina mygtukus 'Kitas' ir 'Ankstesnis', j
 foxtrick.ForumLastPost.desc=Atidaryti ne pirmą, o paskutinę perskaitytų temų žinutę
 foxtrick.ForumLastPost.lastpage.desc=Atidaryti ne paskutinę žinutę, o visą paskutinį puslapį
 foxtrick.MatchPlayerColouring.desc=Rungtynių ataskaitoje skirtingų komandų žaidėjai rodomi skirtingomis spalvomis. Pasinaudojus nuoroda konkretaus žaidėjo puslapyje, paryškinamas tik tas žaidėjas.
-foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Separate own player coloring
-foxtrick.MatchReportFormat.desc=Presentation of the report line by line according to match events.
+foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Atskira spalva saviems žaidėjams 
+foxtrick.MatchReportFormat.desc=Rungtynių ataskaita išskirstoma eilutėmis pagal įvykių laiką ir tipą.
 foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=Separate own team coloring
 foxtrick.ForumRedirManagerToTeam.desc=Paspaudus ant vartotojo vardo forume, rodomas komandos puslapis, o ne vartotojo puslapis
 foxtrick.ManagerButtons.desc=Add or change manager buttons on manager and team page
@@ -231,7 +231,7 @@ foxtrick.ExtraShortcuts.Downtime.desc=Downtime Radio
 foxtrick.CopyMatchID.desc=Nukopijuoja rungtynių ID, kai paspaudžiamas lygos/taurės/draugiškų rungtynių paveikslėlis rungtynių arba rungtynių archyvo puslapyje. Taip pat veikia rėmėjams skirtame puslapyje 'Vienas prieš kitą' ('Paskutinės rungtynės' ir 'Istorija' kortelėse).
 foxtrick.HeaderFix.desc=Pritvirtina Hattrick antraštę slenkant puslapį (visuose HT puslapiuose)
 foxtrick.HeaderFix.FixLeft.desc=Also fixes the submenu while scrolling
-foxtrick.CopyRatings.desc=Rungtynių ataskaitos skiltyje 'Veiksmai' prideda mygtuką, kurį nuspaudus nukopijuojami rungtynių reitingai (HT-ML stiliumi, pritaikytu atvaizdavimui forumo žinutėse)
+foxtrick.CopyRatings.desc=Rungtynių ataskaitoje prideda mygtuką, kurį nuspaudus nukopijuojami rungtynių reitingai (HT-ML stiliumi, pritaikytu atvaizdavimui forumo žinutėse)
 foxtrick.GoalDifferenceToTables.desc=Adds an extra column for goal difference on promotion table as well as on old series tables
 foxtrick.CrossTable.desc=Adds an extra table to Fixtures, where all results on league matches are presented including line graph of league postitions
 foxtrick.ElectionTable.desc=Adds percentage to election table (only displayed votes are counted, not all)
@@ -286,7 +286,7 @@ foxtrick.SkillColoring.skill_number_translated.desc=Show skills also translated 
 foxtrick.SkillColoring.skill_select.desc=Rodyti skaičius sandorių paieškoje, pavyzdžiui, geras (7)
 foxtrick.SkillColoring.no_skill_links.desc=Panaikina žaidėjų įgūdžių žalią spalvą ir pabraukimą
 foxtrick.BackgroundFixed.desc=Static background image.
-foxtrick.MatchIncome.desc=Match income in the match report
+foxtrick.MatchIncome.desc=Rungtynių ataskaitoje rodo už bilietus gautas pajamas
 #YouthSkillHideUnknown
 foxtrick.YouthSkillHideUnknown.desc=Hide unknown skills and/or "maximum" word on youth players page
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Hide unknown skills
@@ -307,7 +307,7 @@ foxtrick.CountryList.HideFlagOntop.desc=Removes the image link to the league on 
 foxtrick.MatchTables.desc=Removes white space on match tables
 foxtrick.MatchTables.RemoveTime.desc=Removes match time on current matches table
 foxtrick.YouthPromotes.desc=Shows days to promote a youth player
-foxtrick.HTMSPrediction.desc=Add result prediction on match report page
+foxtrick.HTMSPrediction.desc=Rungtynių ataskaitos puslapyje prideda rezultato spėjimą
 foxtrick.HighlightOwnerless.desc=Highlights ownerless teams on the series page.
 foxtrick.LastLogin.desc=Displays time since last login on user's page
 foxtrick.TransferCompareSort.desc=Clicking on the header sorts the TransferCompare results by TSI, price or form
@@ -355,15 +355,15 @@ foxtrick.ShowLineupSet.Ownerless.desc=Highlight ownerless teams
 foxtrick.ShowLineupSet.Winning.desc=Highlight winning teams
 foxtrick.SupporterStatsEnhancements.desc=Highlights current squad players in supporter stats
 foxtrick.MobileEnhancements.desc=Set of enhancements for mobile devices
-foxtrick.MatchOrderInterface.desc=Tweaks on the match order interface.
-foxtrick.MatchOrderInterface.PlayedLastMatch.desc=Highlights players which played in the last match and shows last position and time played in the details box
-foxtrick.MatchOrderInterface.Specialties.desc=Show player specialties
-foxtrick.MatchOrderInterface.StayOnPage.desc=Stay on the matchorder page after saving
-foxtrick.MatchOrderInterface.SwapPositions.desc=Add a link to swap players left to right
-foxtrick.MatchSimulator.desc=Adds a match simulator to the match order interface.
-foxtrick.MatchSimulator.RatingsOnTop.desc=Keeps ratings prediction on top
-foxtrick.MatchSimulator.RatingsBellow.desc=Displays prediction bellow
-foxtrick.MatchSimulator.RatingsRight.desc=Displays prediction on the right
+foxtrick.MatchOrderInterface.desc=Rungtynių nurodymų puslapio patobulinimai.
+foxtrick.MatchOrderInterface.PlayedLastMatch.desc=Pažymėti žaidėjus, žaidusius paskutinėse rungtynėse (žaidėjo kortelėje rodomi žaistų minučių skaičius ir pozicija)
+foxtrick.MatchOrderInterface.Specialties.desc=Rodyti žaidėjų specialybes
+foxtrick.MatchOrderInterface.StayOnPage.desc=Išsaugojus sudėtį neuždaryti nurodymų puslapio
+foxtrick.MatchOrderInterface.SwapPositions.desc=Pridėti nuorodą, leidžiančią sukeisti žaidėjus iš kairės pusės į dešinę
+foxtrick.MatchSimulator.desc=Rungtynių nurodymų puslapyje prideda rungtynių simuliatorių.
+foxtrick.MatchSimulator.RatingsOnTop.desc=Reitingų spėjimas lieka virš sudėties
+foxtrick.MatchSimulator.RatingsBellow.desc=Rodyti spėjimą žemiau
+foxtrick.MatchSimulator.RatingsRight.desc=Rodyti spėjimą dešinėje
 foxtrick.HeaderToggle.desc=Clicking on h2-headers toggles showing and hiding of the following section. Remembers last setting individually based on page type and header title
 foxtrick.Filter.desc=Adds filters to top players page
 foxtrick.RatingsRange.desc=Displays average ratings in statistics in the 0-20 range
