lt-LT: info tab
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8009 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -153,17 +153,17 @@ foxtrick.ForumRedirManagerToTeam.desc=Paspaudus ant vartotojo vardo forume, rodo
 foxtrick.ManagerButtons.desc=Add or change manager buttons on manager and team page
 foxtrick.ManagerButtons.GuestBook.desc=Adds Write in Guestbook link to manager page and team page
 foxtrick.HTThreadMarker.desc=Pažymi temas, sukurtas HT kūrėjų
-foxtrick.TeamStats.desc=Sukuria žaidėjų apžvalgą.
-foxtrick.TeamStats.General.desc=General information (TSI/age)
-foxtrick.TeamStats.Speciality.desc=Speciality
-foxtrick.TeamStats.Personality.desc=Personality
-foxtrick.TeamStats.Status.desc=Status (cards/injures)
-foxtrick.TeamStats.Current_league.desc=Current League
-foxtrick.ExtraPlayerInfo.desc=Show extra information of players on players page.
-foxtrick.ExtraPlayerInfo.CoachInfo.desc=Show information of former and current coaches.
-foxtrick.ExtraPlayerInfo.Flag.desc=Show nationalities of players as flags.
+foxtrick.TeamStats.desc=Sukuria komandos apžvalgą.
+foxtrick.TeamStats.General.desc=Bendra informacija (TSI ir amžius)
+foxtrick.TeamStats.Speciality.desc=Specialybė
+foxtrick.TeamStats.Personality.desc=Asmenybė
+foxtrick.TeamStats.Status.desc=Būsena (kortelės ir traumos)
+foxtrick.TeamStats.Current_league.desc=Dabartinė lyga
+foxtrick.ExtraPlayerInfo.desc=Žaidėjų puslapyje rodo daugiau informacijos.
+foxtrick.ExtraPlayerInfo.CoachInfo.desc=Rodo buvusių ir esamų trenerių informaciją.
+foxtrick.ExtraPlayerInfo.Flag.desc=Žaidėjo tautybę simbolizuoja vėliava.
 foxtrick.PlayerFilters.desc=Add a select box for filtering players on players page.
-foxtrick.HistoryStats.desc=Compiles an overview of team's history.
+foxtrick.HistoryStats.desc=Sukuria komandos istorijos lentelę.
 foxtrick.LargeFlags.desc=Žaidėjo puslapyje rodo didelę šalies vėliavą, jei rodomi avatarai (gali sutrikti GNU/Linux sistemoje)
 foxtrick.GoToPostBox.desc=Forumo puslapyje prideda lentelę 'Eiti į žinutę (xxx.)yyy'. Paslepia HT funkciją 'Žymėti kaip neskaitytą nuo'!! Galite pasinaudoti 'MarkUnread' moduliu šiai funkcijai perkelti į žinutės apačią.
 foxtrick.TeamSelectBox.desc=Žaidėjų puslapyje paprastą sąrašą pakeičia iššokančiu sąrašu. Paspaudus antraštę pakeičiamas sąrašo tipas.
@@ -181,9 +181,9 @@ foxtrick.ExtendedPlayerDetails.SW.desc=Kontrakto trukmės formatas: sezonai - sa
 foxtrick.ExtendedPlayerDetails.SD.desc=Kontrakto trukmės formatas: sezonai - dienos
 foxtrick.ExtendedPlayerDetails.WD.desc=Kontrakto trukmės formatas: savaitės - dienos
 foxtrick.ExtendedPlayerDetails.D.desc=Kontrakto trukmės formatas: dienos
-foxtrick.ExtendedPlayerDetailsWage.desc=Shows wage without bonus and/or seasonal wage
-foxtrick.ExtendedPlayerDetailsWage.WageWithoutBonus.desc=Displays wage without bonus
-foxtrick.ExtendedPlayerDetailsWage.SeasonWage.desc=Displays seasonal wage
+foxtrick.ExtendedPlayerDetailsWage.desc=Rodo atlyginimą be premijos ir (ar) per sezoną
+foxtrick.ExtendedPlayerDetailsWage.WageWithoutBonus.desc=Rodyti atlyginimą be premijos
+foxtrick.ExtendedPlayerDetailsWage.SeasonWage.desc=Rodyti sezoninį atlyginimą
 foxtrick.FixcssProblems.desc=Fixes some Problems of wrong HT css styles
 foxtrick.FixcssProblems.Club_Menu_Teamnames.desc=Fixes cut of long teamnames on left menu
 foxtrick.FixcssProblems.Forum_FoxLink_Headers.desc=Fixes invisible FoxLink images in posting headers
@@ -232,9 +232,9 @@ foxtrick.CopyMatchID.desc=Nukopijuoja rungtynių ID, kai paspaudžiamas lygos/ta
 foxtrick.HeaderFix.desc=Pritvirtina Hattrick antraštę slenkant puslapį (visuose HT puslapiuose)
 foxtrick.HeaderFix.FixLeft.desc=Also fixes the submenu while scrolling
 foxtrick.CopyRatings.desc=Rungtynių ataskaitoje prideda mygtuką, kurį nuspaudus nukopijuojami rungtynių reitingai (HT-ML stiliumi, pritaikytu atvaizdavimui forumo žinutėse)
-foxtrick.GoalDifferenceToTables.desc=Adds an extra column for goal difference on promotion table as well as on old series tables
-foxtrick.CrossTable.desc=Adds an extra table to Fixtures, where all results on league matches are presented including line graph of league postitions
-foxtrick.ElectionTable.desc=Adds percentage to election table (only displayed votes are counted, not all)
+foxtrick.GoalDifferenceToTables.desc=Pakilimų ir senų grupės turn. lentelių puslapiuose prideda įvarčių skirtumo stulpelį
+foxtrick.CrossTable.desc=Tvarkaraščio puslapyje sukuria komandų pozijų kitimo laike grafiką ir lentelę, kurioje rodomi visi lygos rungtynių rezultatai
+foxtrick.ElectionTable.desc=Rinkimų rezultatų lentelėje rodomi surinktų balsų procentai (įskaičiuojami ne visi, o tik pavaizduoti balsai)
 foxtrick.ContextMenuCopy.desc=Kontekstiniame meniu prideda galimybę nukopijuoti ID (komandos, valdytojo ID...)
 foxtrick.ContextMenuCopy.Id.desc=Option for copying ID
 foxtrick.ContextMenuCopy.Link.desc=Option for copying link location in HT-ML
@@ -249,9 +249,9 @@ foxtrick.CopyYouth.ScoutComment.desc=Scout comment
 foxtrick.CopyYouth.RejectedToHTY.desc=Copy scout comment and open HT-Youthclub on rejecting player
 foxtrick.CopyYouth.PlayerSource.desc=Player source
 foxtrick.CopyYouth.FixturesSource.desc=Fixtures source
-foxtrick.PlayerBirthday.desc=Shows last and coming birthdays in players overview
+foxtrick.PlayerBirthday.desc=Komandos apžvalgoje rodyti praėjusius ir ateinančius gimtadienius
 foxtrick.MovePlayerSelectbox.desc=Moves players selectbox up on players detail page
-foxtrick.SeasonStats.desc=Shows some stats on the match archive pages
+foxtrick.SeasonStats.desc=Rodyti rungtynių archyvo statistiką
 foxtrick.LeagueNewsFilter.desc=Filters for showing a certain type of league news.
 foxtrick.LeagueNewsFilter.all.desc=Show all news
 foxtrick.LeagueNewsFilter.friendlies.desc=Show only international friendlies and changed coaches
@@ -291,9 +291,9 @@ foxtrick.MatchIncome.desc=Rungtynių ataskaitoje rodo už bilietus gautas pajama
 foxtrick.YouthSkillHideUnknown.desc=Hide unknown skills and/or "maximum" word on youth players page
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Hide unknown skills
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Hide "maximum" word to gain more space
-foxtrick.SkillTable.desc=Show skills of players as a table.
-foxtrick.SkillTable.OtherTeams.desc=Enable for other teams
-foxtrick.SkillTable.ColouredYouth.desc=Show coloured youth skills
+foxtrick.SkillTable.desc=Žaidėjų įgūdžius rodyti lentelėje.
+foxtrick.SkillTable.OtherTeams.desc=Taip pat ir kitoms komandoms
+foxtrick.SkillTable.ColouredYouth.desc=Jaunių įgūdžius nuspalvinti
 #HighlightCupwins
 foxtrick.HighlightCupwins.desc=Highlight winning teams on cup matches page
 foxtrick.HighlightCupwins.HighlightCupsets.desc=Highlight cupsets (matches won by the team of lower ranking)
@@ -306,10 +306,10 @@ foxtrick.CountryList.ManagerPage.desc=Displays a textlink to the league before t
 foxtrick.CountryList.HideFlagOntop.desc=Removes the image link to the league on team page
 foxtrick.MatchTables.desc=Removes white space on match tables
 foxtrick.MatchTables.RemoveTime.desc=Removes match time on current matches table
-foxtrick.YouthPromotes.desc=Shows days to promote a youth player
+foxtrick.YouthPromotes.desc=Rodo dienų skaičių, likusį iki galimo jaunio paaukštinimo
 foxtrick.HTMSPrediction.desc=Rungtynių ataskaitos puslapyje prideda rezultato spėjimą
 foxtrick.HighlightOwnerless.desc=Highlights ownerless teams on the series page.
-foxtrick.LastLogin.desc=Displays time since last login on user's page
+foxtrick.LastLogin.desc=Vartotojo puslapyje rodo nuo jo prisijungimo praėjusį laiką
 foxtrick.TransferCompareSort.desc=Clicking on the header sorts the TransferCompare results by TSI, price or form
 foxtrick.ForumStripHattrickLinks.desc=Ištrina konkretaus serverio adresą įterpus nuorodą į vidinį HT puslapį, kad nuoroda veiktų visiems. Taip pat prideda tarpus persiklojantiems „i/b/u“ „pre“ žymose (modulis FormatPostingText)
 foxtrick.ForumStripHattrickLinks.NoConfirmStripping.desc=Neperspėti apie ištrinamus serverių adresus
@@ -318,7 +318,7 @@ foxtrick.LeagueAndMatchChat.OpenYapletPopup.desc=Open Yaplet chat in new window
 foxtrick.LeagueAndMatchChat.OpenGabblyPopup.desc=Open Gabbly chat in new window
 foxtrick.LeagueAndMatchChat.ChatNick.desc=Choose your nickname for Chat
 foxtrick.RapidId.desc=A convenient input box on the top of page to view team, player, etc. by id
-foxtrick.YouthSeriesEstimation.desc=In search result table, estimates the start time of youth series that are in season break.
+foxtrick.YouthSeriesEstimation.desc=Paieškos rezultatų lentelėje numato jaunių grupės sezono pradžią.
 foxtrick.LocalTime.desc=Optionally show time in local time zone instead of Hattrick time zone
 foxtrick.ForumThreadAutoIgnore.desc=Automatiškai ignoruoti temas su pasirinktomis žymomis (temos, prasidedančios „[Žyma]“ ar „{Žyma}“).
 foxtrick.ForumThreadAutoIgnore.Tags.desc=Žymų sąrašas, pvz., „NT“, „Idėja“, „Klaida“. Atskirti kableliais, mažosios raidės neskiriamos nuo didžiųjų.
@@ -327,33 +327,33 @@ foxtrick.TableSort.desc=Makes all 'proper' tables sortable which have a header (
 foxtrick.LiveAlert.desc=Rodyti pranešimą apie HT Live įvarčius
 foxtrick.LiveAlert.Sound.desc=Taip pat paleisti garsinį signalą
 foxtrick.OldStyleFace.desc=Show faces in old Hattrick style
-foxtrick.NtPeek.desc=Peeks NT/U20 matches on country page and My Hattrick
-foxtrick.SeriesFlags.desc=Show series flags beside user links
-foxtrick.SeriesFlags.Guestbook.desc=Show in guest book
-foxtrick.SeriesFlags.Supporters.desc=Show in the supporters box of a team
-foxtrick.SeriesFlags.Visitors.desc=Show in recent visitors box
-foxtrick.SeriesFlags.CountryOnly.desc=Display the country flag without series name
-foxtrick.HTMSPoints.desc=Show the training points for a player calculated with HTMS skill table
-foxtrick.HTMSPoints.AddToPlayer.desc=Show on player page
-foxtrick.HTMSPoints.AddToSearchResult.desc=Show on transfer search result page
-foxtrick.HTMSPoints.AddToPlayerList.desc=Show on player list page
-foxtrick.TableOfStatisticalTruth.desc=Statistical prediction of serie's final standing positions (only for finished seasons).
+foxtrick.NtPeek.desc=Žvilgtelėti į nacionalinių rinktinių rungtynes šalies ir Mano Hattrick puslapiuose
+foxtrick.SeriesFlags.desc=Šalia vartotojų nuorodų rodyti grupes ir vėliavas
+foxtrick.SeriesFlags.Guestbook.desc=Svečių knygoje
+foxtrick.SeriesFlags.Supporters.desc=Komandos rėmėjų sąraše
+foxtrick.SeriesFlags.Visitors.desc=Pastarųjų svečių sąraše
+foxtrick.SeriesFlags.CountryOnly.desc=Rodyti tik vėliavą (be grupės)
+foxtrick.HTMSPoints.desc=Rodo žaidėjo taškus už gautas treniruotes (pagal HTMS įgūdžių lentelę)
+foxtrick.HTMSPoints.AddToPlayer.desc=Rodyti žaidėjo puslapyje
+foxtrick.HTMSPoints.AddToSearchResult.desc=Rodyti sandorių paieškos rezultatų puslapyje
+foxtrick.HTMSPoints.AddToPlayerList.desc=Rodyti žaidėjų sąrašo puslapyje
+foxtrick.TableOfStatisticalTruth.desc=Statistinis galutinių pozicijų grupėje spėjimas (ik pasibaigusiems sezonams).
 foxtrick.FriendlyInterface.desc=Tweaks to provide friendlier interface
 foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Show player names without ellipses in match line up page
 foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Display national teams as links for national players
 foxtrick.FriendlyInterface.HideAnswerTo.desc=Hide answer-to links in guest book
 foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Hide the secretary if he has nothing to report
-foxtrick.MyMonitor.desc=Monitor recent matches of friends and foes at My Hattrick
-foxtrick.MyMonitor.TeamIcons.desc=Show team logos
+foxtrick.MyMonitor.desc=Mano Hattrick puslapyje sekite draugų ir varžovų rungtynes
+foxtrick.MyMonitor.TeamIcons.desc=Rodyti komandų logotipus
 foxtrick.MarkAllAsRead.desc=Mygtukas visas temas visuose forumuose pažymi perskaitytomis
-foxtrick.ShowFriendlyBooked.desc=Show whether a team has booked a friendly on series page
-foxtrick.ShowFriendlyBooked.OnDemand.desc=Show friendlies on demand only
+foxtrick.ShowFriendlyBooked.desc=Grupės puslapyje rodyti, ar komandos susitariusios dėl draugiškų rungtynių
+foxtrick.ShowFriendlyBooked.OnDemand.desc=Tik paspaudus nuorodą
 foxtrick.TickerAlert.desc=Rodyti pranešimą pasikeitus naujienų eilutei. Jei nepageidaujate garso, palikite atitinkamus teksto laukus tuščius.
-foxtrick.ShowLineupSet.desc=Highlight teams that have set a lineup, and/or ownerless teams, and/or winning teams in league fixture/result table
-foxtrick.ShowLineupSet.LineupSet.desc=Highlight teams that have set a lineup
-foxtrick.ShowLineupSet.Ownerless.desc=Highlight ownerless teams
-foxtrick.ShowLineupSet.Winning.desc=Highlight winning teams
-foxtrick.SupporterStatsEnhancements.desc=Highlights current squad players in supporter stats
+foxtrick.ShowLineupSet.desc=Grupės puslapyje pažymėti komandas, kurios:
+foxtrick.ShowLineupSet.LineupSet.desc=Rungtynėms nurodė sudėtį
+foxtrick.ShowLineupSet.Ownerless.desc=Neturi valdytojo
+foxtrick.ShowLineupSet.Winning.desc=Laimėjo (rezultatų skiltyje ir tvarkaraštyje)
+foxtrick.SupporterStatsEnhancements.desc=Rėmėjo statistikoje paryškinti dabartinius žaidėjus
 foxtrick.MobileEnhancements.desc=Set of enhancements for mobile devices
 foxtrick.MatchOrderInterface.desc=Rungtynių nurodymų puslapio patobulinimai.
 foxtrick.MatchOrderInterface.PlayedLastMatch.desc=Pažymėti žaidėjus, žaidusius paskutinėse rungtynėse (žaidėjo kortelėje rodomi žaistų minučių skaičius ir pozicija)
